app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
html, body { 
  margin: 0;
  padding: 0;
  font-family: Roboto, sans-serif; 
  background-color: transparent;
  overflow: hidden;
  text-align: center;
}

#page {
  display: flex;
  flex-wrap: wrap;
  align-content: space-between;
  text-align: left;
  position: absolute;
  top: 5.6rem;
  left: 12rem;
  height: 90%;
  overflow: auto;
  z-index:2;
}

#map {
  height: 100%;
  width: 100%;
  position: absolute;
  z-index:1;
}

#nav-menu {
  position: absolute;
  top: 0;
  padding-top: 0.3rem;
  float: left;
  margin: 5px;
  width: 100%;
  pointer-events: none;
  z-index: 2;
}

#nav-menu * {
  pointer-events: all;
}

#hed {
  font-family: Roboto;
  font-size: 2rem;
  /*font-weight: bold;*/
  padding: 1rem 2rem;
  margin-right: 40px;
  min-width: 6rem;
  color: #eee;
  background: #223;
}

/* 
this is how to do mobile, by screen resolution:
@media (max-width: 1200px) {} 
*/

#bgimg {
  background-size: cover;
  height: 100vh; 
  width: 100vw; 
}

#opac {
  background: radial-gradient(black,grey); 
  height: 100vh; 
  width: 100vw; 
  opacity: 0.4;
  position: absolute;
  top: 0;
}

#pac-box {
  position:absolute;
  left: 14rem;
  top: 0.7rem;
  z-index: 2;
}

.searchbar {
  width: 400px;
  padding-right: 0;
}

input#pac-input:focus {
  background:none;
} 

#i {
  float: left;
  font-weight: bold;
}

.in-float {
  height: 2rem;
  line-height: 2rem;
  background-color: #fff;
  color: #000;
  float: left;
  box-shadow: 1px 1px 1px #000;
  margin: 0 5px;
  padding: 0 1rem;
}

.in-float label {
  font-size: 1em;
  margin: 10px;
  vertical-align: top;
}

.in-float input {
  border: none;
  font-size: 1em;
  font-family: inherit;
}

.box .in-float {
  display: block;
}

.box {
  margin: 10px;
  float: left;
  clear: both;
}

.box input[type=submit] {
  background: none;
  font-weight: bold;
}

.box .in-float input[type=submit]{
  background:#334; color:#fff;
}

#search-text-input {
  font-size: 1em;
  width: 100%;
  border: 0px;
  background: transparent;
}

#search-button {
  height: 64px;
  background-color: #cdcccc;
  border: 0;
  font-family: Roboto, sans-serif;
  font-size: 1em;
  margin: 0;
  float: right;
  margin-top: -3rem;
  box-shadow: none;
}

.headline-info {
  font-weight: normal;
  font-size: smaller;
}

code {
  padding: 2px 6px;
  border-radius: 2px;
  border: 1px solid #000;
}

input:focus{
  outline: none;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: normal;
}

a { color: #00a; }

  .row {
    box-shadow: 1px 1px 1px #AAA; 
    margin: 10px;
    padding: 0px;
    display: inline-block;
    color: #000;
  }
 
  .row div {
    display: inline-block;
    padding: 10px;
  }

  .num {
    background: #B8E4BD;
    padding: 10px;
  }

  .num.fil {
    background: forestgreen;
    color: #fff;
    text-shadow: 1px 1px #000;
    font-weight: bold;
    float: left;
    margin: 0;
  }

  .sid {
    text-align:center;
    overflow-wrap: break-word;
    max-width: 300px;
    display: inline-block;
    float: left;
    color: #333;
  }

  .inf {
    font-size: 0.8rem;
  }

  .tyt {
    font-weight: bold;
    text-align: center;
  }

  .tyt code {
    font-weight: normal;
  }

  .tic {
    float: right;
    padding: 10px;
    margin: 0;
  }

  .nym {
    font-weight: bold;
    padding: 5px;
  }

  .loc {
    font-family: monospace;
    background: #DDD;
    border-radius: 3px;
    padding: 3px !important;
  }

  .who {
    float: right;
    margin: 5px;
    padding: 5px;
  }

  .how {
    font-style: italic;
    color: #AAA;
  }

  .wut {
    color: #999;
    max-width: 500px;
    overflow-wrap: break-word;
    display: block !important;
  }

  .adr {
    font-family: monospace;
    background: #b8e4ab;
    border-radius: 3px;
    padding: 3px !important;
    margin: 0px;
  }

  .qr {  
    max-width: 200px;
    margin: 0;
    padding: 0;
    display: block;
    margin: auto;
  }

  .fill {
    margin: 5px;
    padding: 10px 20px;
    color: #000;
    background: #B8E4BD;
  }

  input[type="submit"] {
    margin: 0;
    padding: 3px 10px;
    background: #eee;
    border: none;
    font-family: inherit;
    font-size: inherit;
  }

  textarea#bounty_description {
    border: 0;
    font-family: Roboto, sans-serif;
    vertical-align: -webkit-baseline-middle;
    min-width: 500px;
    display: block;
    font-size: 1em;
    resize:none;
    min-height: 100px;
  }

  *:focus{
    background-color:#eee;
    outline: none;
  }

  #b-f-d {
    min-height: 150px;
  }

  #ab {
    background: #223;
    color: #fff;
  }

  #cred {
    font-size: 0.6rem;
    background: #223;
    color: #fff;
  }

  #signout-button {
    position: absolute;
    right: 1em;
    width: 6.7rem;
  }

  #signup-button {
    position: absolute;
    right: 1rem;
    text-decoration: none;
    background: #223;
    color: #eee;
    /*font-weight: bold;*/
  }

  #login-button {
    position: absolute;
    right: 7.5rem;
    text-decoration: none;
  }

  .nav-button {
    float:left;
    clear:both;
    margin-top: 1rem;
    min-width: 8rem;
  }

  #flashes {
    position: absolute;
    text-align: center;
    top: 1rem;
    z-index: 5;
    left: 40%;
  }

  #botflashes {
    position: absolute;
    text-align: center;
    top: 5rem;
    z-index: 5;
    left: 40%;
  }

  .flash {
    background: #eee;
    padding: 1rem;
    box-shadow: 1px 1px 1px #000;
  }

  .error {
    background: #c55;
  }

  .alert {
    background: #ff5;
  }

  .load {
    font-size: 2em;
    font-family: Roboto; 
    font-weight: bold;
    color: #fff;
    background: #223;
    box-shadow: 1px 1px 1px #dde;
  }

  #buttonto {
    background: #eef;
    float: right;
    display: inline-block;
    box-shadow: none;
    padding: 10px;
  }

  .signupfield {
    text-align: center;
  }

  .signupfield input {
    box-shadow: 1px 1px 1px #999;
  }

  .links a {
    margin: 0 2px;
    color: #000;
  }

  #infovotes {
    box-shadow: none;
  }

  .in-float.rod {
    position: absolute;
    right: 1rem;
    top: 3.4rem;
    padding: 0 1em;
    font-size: 0.8rem;
  }

  .in-float.sat {
    right: 5.21rem;
  }

  .b-a {
    font-weight: bold;
    display: inline-block;
    margin: 0.5rem;
  }

  .b-p {
    text-align:center;
  }

  .b-t {
    font-size: 2em;
  }

  .b-n {
    margin-top:0.5rem;
    text-align: right;
    color: #555;
  }

  .b-d {
    text-align: left;
    margin: 0;
  }

  .b-s {
    margin:0 3em;
    overflow-wrap:break-word;
  }

  p { margin: 0 }

